tests/toy/neg/001570_mutation.toylang
program a = { while do a do sleep; } .
